--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,12 @@ allure-pytest==2.8.40
 allure-python-commons==2.8.40
 atomicwrites==1.4.0
 attrs==20.3.0
+certifi==2020.12.5
+chardet==4.0.0
+colorama==0.4.4
+configparser==5.0.2
+crayons==0.4.0
+idna==2.10
 more-itertools==8.7.0
 packaging==20.9
 pluggy==0.13.1
@@ -9,7 +15,9 @@ py==1.10.0
 pyparsing==2.4.7
 pytest==5.1.1
 pytest-rerunfailures==9.1.1
+requests==2.25.1
 selenium==3.14.0
 six==1.16.0
 urllib3==1.26.4
 wcwidth==0.2.5
+webdriver-manager==3.4.1
